--- a/source/articles/other-isomorphic-keyboards.html.md.erb
+++ b/source/articles/other-isomorphic-keyboards.html.md.erb
@@ -1,17 +1,17 @@
 <div class="grid-container">
   <div class="grid-x grid-padding-x">
     <div class="cell large-8">
-      <div class="section section--top" markdown="1">
+      <div class="section section--top article-body" markdown="1">
       
-#Other Isomorphic Keyboards
+# Other Isomorphic Keyboards
 
 One of the cardinal sins of productivity is to do what has already been
-done.^1^ But in my quest to test an isomorphic keyboard against the
+done. But in my quest to test an isomorphic keyboard against the
 traditional keyboard, I appear to have sinned.
 
 Isomorphic keyboards have existed since the the early nineteenth century
 when an isomorphic layout was applied to the button accordions or
-concertina.^2^ [Many](http://daskin.com/page2/page2.html)
+concertina.<sup>1</sup> [Many](http://daskin.com/page2/page2.html)
 [different](http://www.shiverware.com/musixpro/)
 [isomorphic](https://chromatone.jp/online-shop/index.html)
 [keyboards](http://www.lippenskeyboard.com/purchase/) can
@@ -21,13 +21,13 @@ and built my own.
 But I would argue that I am not a sinner. Well, at least in this
 particular instance.
 
-##The Similarity Advantage
+## The Similarity Advantage
 
 The similarities the LIK shares with the traditional keyboard make the
 LIK easier to adopt in comparison to other isomorphic keyboards. This
 advantage manifests itself in two aspects of adopting the LIK.
 
-##Ease of playing
+## Ease of playing
 
 The likeness of the keyboards make the LIK easier for pianists to play,
 as the skills needed to play the LIK are more transferable with the
@@ -40,7 +40,7 @@ intervallic relationship between itself and adjacent keys. For instance,
 on the Wicki-Hayden layout, any given key is surrounded by six other
 keys. The key above and to the left is a fourth higher, the key above
 and to the right is a fifth higher, and the key to the right is a whole
-step higher.^3^ Different isomorphic keyboards generally have different
+step higher.<sup>2</sup> Different isomorphic keyboards generally have different
 interval relationships between adjacent keys.
 
 To compare performance on keyboards, here is one octave of the C major
@@ -74,7 +74,7 @@ I am not claiming that the LIK has better fingerings than the other
 isomorphic layouts, but that the similarities to the traditional
 keyboard will make it easier to adopt.
 
-##Ease of creation
+## Ease of creation
 
 The LIK is much easier to create than other isomorphic keyboards,
 because you don't have to start from scratch.
@@ -87,12 +87,7 @@ is an awesome project. But for the rest of us, the process of making an
 LIK is much more appealing, because instead of creating the keyboard
 from scratch, you buy a keyboard, open it up, and replace the keys.
 
-Okay it isn't *that* simple. Someone has to create the keys. I'm going
-to try to take care of that for you (at least until a legitimate company
-can take over). I'm going to create models for linear isomorphic keys
-for popular, cheap, high quality keyboards that you can 3d print
-yourself, or order from me. This is a work in progress, but you can
-learn more here **link to How to purchase a LIK**.
+Okay it isn't *that* simple. Someone has to create the keys, and mass producing keys that can be made with injection molding has proven to be difficult/expensive. I'm working on this, and if the LIK proves to be an improvement then I'll be working a lot more.
 
 The LIK also will be easy for manufacturers to make. They could create
 the new key (by altering the model of their black keys to have the
@@ -101,7 +96,7 @@ Creating a new product is never a small undertaking, but the
 infrastructure the LIK shares with the traditional keyboard makes
 production that much easier.
 
-##Conclusion
+## Conclusion
 
 I have no reason to believe that the LIK is inherently superior to other
 isomorphic keyboards. But in a world dominated by the traditional
@@ -109,11 +104,10 @@ keyboard, its similarity to the norm uniquely positions the LIK to be
 the isomorphic keyboard that disrupts the reign of the traditional
 keyboard.
 
-1.  I haven't written this article yet. Maybe I shouldn't be giving advice for productivity...
+1.  ["Hexagonal isomorphic keyboards in a musical instrument probably stem from the early 19th century accordion or concertina."](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
 
-2.  ["Hexagonal isomorphic keyboards in a musical instrument probably stem from the early 19th century accordion or concertina."](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
+2.  [https://en.wikipedia.org/wiki/Wicki-Hayden\_note\_layout\#/media/File:Wicki-Hayden\_Musical\_Note\_Layout.png](https://en.wikipedia.org/wiki/Wicki-Hayden_note_layout#/media/File:Wicki-Hayden_Musical_Note_Layout.png)
 
-3.  [https://en.wikipedia.org/wiki/Wicki-Hayden\_note\_layout\#/media/File:Wicki-Hayden\_Musical\_Note\_Layout.png](https://en.wikipedia.org/wiki/Wicki-Hayden_note_layout#/media/File:Wicki-Hayden_Musical_Note_Layout.png)
-    </div>
-  </div>
+</div>
+</div>
 </div>
