--- a/source/articles/the-experiment.html.md.erb
+++ b/source/articles/the-experiment.html.md.erb
@@ -1,6 +1,6 @@
 <div class="grid-container">
   <div class="grid-x grid-padding-x">
-    <div class="cell large-8 section section--top" markdown="1">
+    <div class="cell large-8 section section--top article-body" markdown="1">
 # The Experiment
 
 I am conducting an experiment to determine whether or not the Linear Isomorphic Keyboard is easier to play than the traditional piano keyboard.
@@ -9,21 +9,21 @@ I am conducting an experiment to determine whether or not the Linear Isomorphic 
 
 In order to compare the Linear Isomorphic Keyboard (LIK) and the traditional keyboard (TK), I am going to practice the same content on both keyboards for the same amount of time, and record my practice sessions. In addition to recording, I will be keeping track of my proficiency with each exercise and publishing the data as I go. With the practice routine as a constant, I should be able to compare the playability the keyboards.
 
- Now here&#39;s the essential question: what is playability, and how do you compare and assess the playability of two musical instruments?
+Now here&#39;s the essential question: what is playability, and how do you compare and assess the playability of two musical instruments?
 
-Defining Playability
+### Defining Playability
 
 I define playability of an instrument as the ease of performance on that instrument with a given set of music.
 
 It is important to note that playability can only be measured in regard to the content that is being played. A saxophone would have trouble playing the multi-part harmonies of piano music, and a piano would have trouble bending notes like a saxophone. I would argue that both instruments are very playable, but when assessed on other instruments&#39; music they can appear to be unplayable.
 
- Thus appears the first confounding variable of this experiment: the content of the practice sessions. I will be playing piano music, designed for the traditional keyboard, but I will not be playing music designed for the LIK (there is none). This might make it easier for the TK to play pieces written for it (such as Hanon, which has most of its exercises in the key of C major). However, as I am measuring the quality of the LIK as a replacement for the TK, I think it is fair to assess the playability of the LIK on content written for the keyboard it could potentially succeed.
+Thus appears the first confounding variable of this experiment: the content of the practice sessions. I will be playing piano music, designed for the traditional keyboard, but I will not be playing music designed for the LIK (there is none). This might make it easier for the TK to play pieces written for it (such as Hanon, which has most of its exercises in the key of C major). However, as I am measuring the quality of the LIK as a replacement for the TK, I think it is fair to assess the playability of the LIK on content written for the keyboard it could potentially succeed.
 
-Assessing Playability
+### Assessing Playability
 
- For a given set of musical content, playability can be measured by the presence of technical limitations, and the rate of improvement.
+For a given set of musical content, playability can be measured by the presence of technical limitations, and the rate of improvement.
 
-Technical Limitations
+#### Technical Limitations
 
 Technical limitations are in musical patterns that are practically impossible to play for the instrument. Playing a note beyond the range of the keyboard is nigh impossible, and would be considered a technical limitation. Even playing a large leap between two notes with one hand at an astronomical tempo can be practically impossible, and thus be a technical limitation.
 
@@ -31,13 +31,13 @@ When evaluating the ability of instruments to play musical patterns, technical l
 
 When music is written for an instrument, the composer usually keeps technical limitations in mind and writes around them. This is why I don&#39;t expect to find many technical limitations for the traditional keyboard: the content I&#39;m practicing was written for the traditional keyboard.  Perhaps in the future there will be music that is written for the LIK that is unplayable on the TK, but the music has yet to be written, so the technical limitations of the TK will go relatively unexplored.
 
-The Rate of Improvement
+#### The Rate of Improvement
 
 The rate of improvement is important when evaluating the playability of instruments. If there was an instrument with no technical limitations that could play anything you think of instantaneously, it would be a phenomenal instrument. However, if it took 10,000 hours to just learn to play the C major scale, the same instrument would be considered unplayable.
 
- On a more realistic spectrum, if there was another instrument that could play the same music as another instrument but the instrumentalist would learn twice as fast, the original instrument would be superseded. We place value on time, so the faster the rate of improvement the better.
+On a more realistic spectrum, if there was another instrument that could play the same music as another instrument but the instrumentalist would learn twice as fast, the original instrument would be superseded. We place value on time, so the faster the rate of improvement the better.
 
- Once again, the rate of improvement can be influenced by the expectations that the written music is conforming to. Hannon wrote his finger exercises for the traditional keyboard, so he only wrote music for white notes. Because of this, I fully expect Hannon&#39;s exercises to be more difficult for the LIK than the TK, so the LIK&#39;s improvement might be slower.
+Once again, the rate of improvement can be influenced by the expectations that the written music is conforming to. Hannon wrote his finger exercises for the traditional keyboard, so he only wrote music for white notes. Because of this, I fully expect Hannon&#39;s exercises to be more difficult for the LIK than the TK, so the LIK&#39;s improvement might be slower.
 
 ## Comparing Playability
 
@@ -45,52 +45,52 @@ In order to compare the playability of both keyboards on, I am going to practice
 
 Using the same basic keyboard is a good control for the quality of the instruments, but the practice session is a bit more difficult to control.
 
-Controlling the practice sessions
+### Controlling the practice sessions
 
 If I were to keep practice sessions exactly the same between keyboards, it would be unfair to the keyboard that was more advanced. For instance, if I practiced the first Hannon exercise at 60 bpm for 20 minutes on the LIK, I shouldn&#39;t be forced to do the same on the traditional keyboard. The TK could have a much easier time with the exercise, making it a waste of time to practice for as long as the LIK might. The keyboard that is behind would get optimized practice sessions, while the more advanced keyboard would have to practice exercises that don&#39;t benefit it nearly as much.
 
- The other extreme would be to have no specified curriculum and let each keyboard practice whatever I believe to be the best thing for that keyboard at the time. This is clearly flawed, because the quality of the exercises would be a significant confounding variable.
+The other extreme would be to have no specified curriculum and let each keyboard practice whatever I believe to be the best thing for that keyboard at the time. This is clearly flawed, because the quality of the exercises would be a significant confounding variable.
 
- This experiment is going to use a middleground. There is a specified curriculum that both keyboards share. The practice material is be broken down into three main domains of musical prowess: fundamentals, sight reading, and playing by ear. Within these domains there are sets of exercises. For instance, in fundamentals, the sets of exercises are scales and arpeggios, Hannon&#39;s finger exercises, and Slonimsky&#39;s Thesaurus of Scales and Musical Patterns.
+This experiment is going to use a middleground. There is a specified curriculum that both keyboards share. The practice material is be broken down into three main domains of musical prowess: fundamentals, sight reading, and playing by ear. Within these domains there are sets of exercises. For instance, in fundamentals, the sets of exercises are scales and arpeggios, Hannon&#39;s finger exercises, and Slonimsky&#39;s Thesaurus of Scales and Musical Patterns.
 
 In order to be fair without being limiting, each keyboard will practice the sets of exercises for the same amount of time, but the specific exercises they play and the difficulty at which they practice the exercise are left to my discretion. This limits the content of the practice session, controls for the quality of the exercises, and still lets each keyboard practice what is best for it.
 
 You can find out more about the curriculum and the reasoning behind it [here](https://linearisomorphickeyboard.com/articles/the-practice-routine/).
 
-Evaluation
+## Evaluation
 
-**       ** By the end of the experiment, I will have data that shows how long I played each exercise on each keyboard, what difficulty I can play any given exercise at, and how much practice it took me get to any given difficulty of any exercise on each keyboard. Using this data, I should not only be able to determine how proficient I am at the end of the experiment, but I should be able to measure my rate of improvement for each exercise, and identify technical limitations. You can see this data live [here](https://linearisomorphickeyboard.com/progress/).
+By the end of the experiment, I will have data that shows how long I played each exercise on each keyboard, what difficulty I can play any given exercise at, and how much practice it took me get to any given difficulty of any exercise on each keyboard. Using this data, I should not only be able to determine how proficient I am at the end of the experiment, but I should be able to measure my rate of improvement for each exercise, and identify technical limitations. You can see this data live [here](https://linearisomorphickeyboard.com/progress/).
 
- I hope that with this data, I will be able to come to a conclusion about the playability of the linear isomorphic keyboard and how it compares to the traditional keyboard.
+I hope that with this data, I will be able to come to a conclusion about the playability of the linear isomorphic keyboard and how it compares to the traditional keyboard.
 
-The Flaws
+## The Flaws
 
- In order for me to assert that the experiment can have a meaningful result in spite of its flaws, I need to show that I&#39;m aware of the flaws. And there are plenty of flaws to be aware of.
+In order for me to assert that the experiment can have a meaningful result in spite of its flaws, I need to show that I&#39;m aware of the flaws. And there are plenty of flaws to be aware of.
 
- The study is not blind and only has one participant who is most certainly biased (I think the LIK is awesome). I don&#39;t know how much of my improvement on the LIK will be a result of transferable skills on the TK or vice versa. The exercises that I will be practicing for fundamentals were created for the traditional keyboard, and they might not have the same beneficial impact for the LIK
-# 1
-. Also, because the exercises were written for the TK, I only expect to find technical limitations for the LIK. In addition, at the outset of the experiment, I will be better at the TK than I will at the LIK, I have played the piano on and off since I was seven, while I played the LIK for no more than twenty minutes before the first assessment (I couldn&#39;t resist). If the initial assessment taught me anything, it is that [I should expect anomalous rates of improvement in first practice sessions](https://linearisomorphickeyboard.com/articles/). **CHANGE THIS LINK**
+The study is not blind and only has one participant who is most certainly biased (I think the LIK is awesome). I don&#39;t know how much of my improvement on the LIK will be a result of transferable skills on the TK or vice versa. The exercises that I will be practicing for fundamentals were created for the traditional keyboard, and they might not have the same beneficial impact for the LIK<sup>1</sup>. Also, because the exercises were written for the TK, I only expect to find technical limitations for the LIK. In addition, at the outset of the experiment, I will be better at the TK than I will at the LIK, I have played the piano on and off since I was seven, while I played the LIK for no more than twenty minutes before the first assessment (I couldn&#39;t resist). If the initial assessment taught me anything, it is that [I should expect anomalous rates of improvement in first practice sessions](https://linearisomorphickeyboard.com/reflections/the-initial-assessment).
 
- Another confounding factor will be my own skills, as they can be a limitation for the performance for both keyboards. My ability to play any scale quickly might not be limited by my comfort with the fingerings, but instead by my ability to play anything that quickly. My ability to play either keyboard by ear is limited by my own ear. It might be much easier on one keyboard than the other, but I can&#39;t remember four measures of music then I won&#39;t be able to play it regardless.
+Another confounding factor will be my own skills, as they can be a limitation for the performance for both keyboards. My ability to play any scale quickly might not be limited by my comfort with the fingerings, but instead by my ability to play anything that quickly. My ability to play either keyboard by ear is limited by my own ear. It might be much easier on one keyboard than the other, but if I can&#39;t remember four measures of music then I won&#39;t be able to play it regardless.
 
- The varying incremental difficulties of exercises is a confounding variable when assessing the keyboards purely by number of difficulty increments played by each keyboard. This confounding variable is removed when both keyboards have played the same increment. Both increasing the ambius and increasing tempo are considered one increment in sight reading, but perhaps increasing the ambitus is far more challenging than increasing the tempo.
+The varying incremental difficulties of exercises is a confounding variable when assessing the keyboards purely by number of difficulty increments played by each keyboard. This confounding variable is removed when both keyboards have played the same increment. Both increasing the ambius and increasing tempo are considered one increment in sight reading, but perhaps increasing the ambitus is far more challenging than increasing the tempo.
 
- The last confounding variable is the benefit of transferable skills or other delayed improvement within one keyboard. Perhaps I&#39;m having trouble playing the C major scale any faster than 100 bpm. While practicing Hanon&#39;s The Virtuoso Pianist, I am going to be inadvertently practicing a lot of C major patterns. I could improve at the C major scale, and this improvement could go unnoticed until I revisit it, or it could make it look like I&#39;m improving at the C major scale without much practice.
+The last confounding variable is the benefit of transferable skills or other delayed improvement within one keyboard. Perhaps I&#39;m having trouble playing the C major scale any faster than 100 bpm. While practicing Hanon&#39;s The Virtuoso Pianist, I am going to be inadvertently practicing a lot of C major patterns. I could improve at the C major scale, and this improvement could go unnoticed until I revisit it, or it could make it look like I&#39;m improving at the C major scale without much practice.
 
-Nullifying the flaws
+### Nullifying the flaws
 
- There are a couple factors that will help control against a few of these flaws. The varying difficulties of increments is controlled for when comparing the content that both keyboards have practiced. It doesn&#39;t matter if it is far harder to go from 60 to 63 bpm than from 72 to 72 bpm for a particular exercise if both keyboards end up playing those speeds. Perhaps improvement will be slower for a given increment, but I will still be able to compare the rates of improvement between the two keyboards.
+There are a couple factors that will help control against a few of these flaws. The varying difficulties of increments is controlled for when comparing the content that both keyboards have practiced. It doesn&#39;t matter if it is far harder to go from 60 to 63 bpm than from 72 to 76 bpm for a particular exercise if both keyboards end up playing those speeds. Perhaps improvement will be slower for a given increment, but I will still be able to compare the rates of improvement between the two keyboards.
 
- The confounding variable of transferable skills (how my skill on one keyboard might help the other) can be partially controlled for by evaluating the improvements between keyboards once their skills in a particular exercise match. For instance, I expect my experience with the traditional keyboard to hasten my improvement on the LIK. However, once I can play an exercise at the same level of difficulty on each keyboard, this benefit is nullified. From that point, if one keyboard has a faster rate of improvement than the other, I am not going to attribute it to my worse skill on the other keyboard.
+The confounding variable of transferable skills (how my skill on one keyboard might help the other) can be partially controlled for by evaluating the improvements between keyboards once their skills in a particular exercise match. For instance, I expect my experience with the traditional keyboard to hasten my improvement on the LIK. However, once I can play an exercise at the same level of difficulty on each keyboard, this benefit is nullified. From that point, if one keyboard has a faster rate of improvement than the other, I am not going to attribute it to my worse skill on the other keyboard.
 
-### In Conclusion
+## In Conclusion
 
 I have defined playability as the ability to perform a given set of music, measured by technical ceilings and rate of improvement. The experiment I&#39;m running will attempt to keep the practice sessions similar to control for the differences in the keyboards. There are flaws and confounding variables in the experiment that will be good to keep in mind while analyzing the results. Despite the flaws, I still think that the findings will carry weight, and if they are significant enough, it might encourage even more sound experiments.
 
+<br>
 
 1. Long-tones are an exercise essential for wind instruments, in which the instrumentalist sustains a note to improve their tone quality. This exercise is not nearly as useful on the piano as pianists do not have control over sustained tone. This is an extreme example, but it illustrates that exercises might not benefit each instrument equally.
+   It is not clear whether or not Hannon&#39;s finger exercises for piano will provide the same benefit the LIK as they will the traditional piano, or if the LIK will benefit from practicing scales and arpeggios for the same amount of time as the traditional keyboard. This could theoretically put the LIK at a disadvantage, but whether it actually will and to what extent will be difficult to determine.
 
- It is not clear whether or not Hannon&#39;s finger exercises for piano will provide the same benefit the LIK as they will the traditional piano, or if the LIK will benefit from practicing scales and arpeggios for the same amount of time as the traditional keyboard. This could theoretically put the LIK at a disadvantage, but whether it actually will and to what extent will be difficult to determine.
-    </div>
-  </div>
+
+</div>
+</div>
 </div>
