--- a/source/articles/the-idea.html.md.erb
+++ b/source/articles/the-idea.html.md.erb
@@ -1,8 +1,10 @@
-<div class="grid-container">
+<div class="grid-container article-body">
   <div class="grid-x grid-padding-x">
-    <div class="cell large-8 section section--top" markdown="1">
+    <div class="cell large-8 section section--top article-body" markdown="1">
 
 #The Idea
+
+<br>
 
 There may be a better way to design the piano.
 
@@ -26,11 +28,11 @@ years later.
 Equal temperament was discovered in 1584, which meant that an instrument
 could be tuned in a way that would allow it to play in any key. Before
 equal temperament, instruments could only be tuned to play in one
-key.^1^
+key.<sup>1</sup>
 
 Throughout the 17th century, Western music transitioned from modality to
 tonality. To put it way too simply, one of the effects of this switch to
-tonality was that people wanted to play in more than one key.^2^
+tonality was that people wanted to play in more than one key.<sup>2</sup>
 
 The traditional keyboard layout is perfect if you only want to play in C
 major. The traditional keyboard layout was not designed for beginners,
@@ -42,32 +44,35 @@ keys equally difficult to play?
 We can do better. Make all keys equal, and in the process, make all keys
 the same.
 
-<%= image_tag "LIK-solo.png" %>
+</div>
+<div class="cell large-12">
+  <%= image_tag "LIK-solo.png" %>
+</div>
+<div class="cell large-8 section" markdown="1">
 
 This is the Linear Isomorphic Keyboard.
 
 The term isomorphism, when applied to musical instruments, means that
 any distinct musical phrase---be it a chord or a sonata---can be played
-the same way regardless of the note that it starts on.^3^
+the same way regardless of the note that it starts on.<sup>3</sup>
 
 What does this mean? On the linear isomorphic keyboard (LIK) there is
 one way to play all of the major scales. You don't learn to play *a*
 major scale, you learn how to play *the* major scale. There is one way
-to play a perfect fifth, instead of four.^4^ If you can play "Für Elise"
+to play a perfect fifth, instead of four.<sup>4</sup> If you can play "Für Elise"
 in one key, you can play it in every key.
 
 This has been done before. There are plenty of isomorphic keyboards.
 Most of them feature a grid of square or hexagonal tiles, with the
 relation between adjacent tiles determined by particular intervals. But
 I think that similarities the LIK shares with the traditional keyboard
-gives it an edge over other isomorphic keyboards **link to LIK: Other
-Isomorphic Keyboards**.
+<a href="/articles/other-isomorphic-keyboards">gives it an edge over other isomorphic keyboards</a>.
 
-Even the LIK isn't a new concept. The keyboard [[was patented in
-1953]{.underline}](https://www.google.com/patents/US2627777), and last
-year there was [[a Kickstarter for a
-prototype]{.underline}](https://www.kickstarter.com/projects/176239/dodeka-music-finally-within-everyones-reach/)
-courtesy of [[Dodeka]{.underline}](http://www.dodeka.info/), but none
+Even the LIK isn't a new concept. The keyboard [was patented in
+1953](https://www.google.com/patents/US2627777), and last
+year there was [a Kickstarter for a
+prototype](https://www.kickstarter.com/projects/176239/dodeka-music-finally-within-everyones-reach/)
+courtesy of [Dodeka](http://www.dodeka.info/), but none
 are currently available for purchase.
 
 But the most important question about the LIK (and other isomorphic
@@ -80,9 +85,7 @@ I'm performing an experiment, comparing my improvement on two keyboards:
 the LIK and the traditional keyboard. I will practice the same content
 for the same amount of time on each keyboard, record all of the practice
 sessions, and periodically publish assessments. It is not a perfect
-study **link to the experiment imperfect section**, but I think the
-findings will still provide valuable insight about the viability of the
-LIK.
+study, but I think the findings will still provide valuable insight about the viability of the LIK.
 
 I have a couple goals in mind. First, I want to begin to fill the dearth
 of studies comparing efficacy of the isomorphic keyboard to the
@@ -97,6 +100,10 @@ the world countless of hours of practice. The piano would be easier and
 more enjoyable to play. Pianists could spend less time on technique and
 transposition and spend more time making music.
 
+Stay tuned.
+
+<br>
+
 If you're still interested, you can read:
 
 <a href="/articles/the-experiment">An in depth description of the experiment</a>
@@ -105,11 +112,12 @@ If you're still interested, you can read:
 
 <a href="/articles/other-isomorphic-keyboards">Why not another isomorphic keyboard?</a>
 
-Stay tuned.
+<br>
+<br>
 
-1.  Here is an example of what it sounds like to play in the wrong key
-    on a non equal temperament keyboard:
-    [[https://www.youtube.com/watch?v=Yqa2Hbb\_eIs]{.underline}](https://www.youtube.com/watch?v=Yqa2Hbb_eIs)
+1.  [https://www.youtube.com/watch?v=Yqa2Hbb\_eIs](Here is an example) of what it
+    sounds like to play in the wrong key on a non equal temperament keyboard:
+    
 
 2.  Discussion of the differences between modality and tonality as well
     as the transition between the two extends far beyond the scope of
@@ -118,22 +126,20 @@ Stay tuned.
     harmonizations with notes that didn't occur in the key they played
     in (if they were playing in keys). To learn a little more check
     out this:
-    [[https://music.stackexchange.com/questions/6401/whats-the-difference-between-modal-music-and-tonal-music]{.underline}](https://music.stackexchange.com/questions/6401/whats-the-difference-between-modal-music-and-tonal-music).
+    [https://music.stackexchange.com/questions/6401/whats-the-difference-between-modal-music-and-tonal-music](https://music.stackexchange.com/questions/6401/whats-the-difference-between-modal-music-and-tonal-music).
     For a deeper dive, with a good look at the transition from
     modality to tonality, check out this article:
-    [[https://soundideas.pugetsound.edu/cgi/viewcontent.cgi?article=1079&context=summer\_research]{.underline}](https://soundideas.pugetsound.edu/cgi/viewcontent.cgi?article=1079&context=summer_research)
+    [https://soundideas.pugetsound.edu/cgi/viewcontent.cgi?article=1079&context=summer\_research](https://soundideas.pugetsound.edu/cgi/viewcontent.cgi?article=1079&context=summer_research)
 
 3.  "Isomorphism applied to musical instruments means that every
     distinct musical performance is executed in the same way,
     regardless of key or location."
-    [[http://smcnetwork.org/system/files/smc2011\_submission\_169.pdf]{.underline}](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
+    [http://smcnetwork.org/system/files/smc2011\_submission\_169.pdf](http://smcnetwork.org/system/files/smc2011_submission_169.pdf)
 
 4.  The traditional keyboard has four different ways to play a perfect
     fifth: White key to white key (eg. C -\> G), white key to black
     key (eg. B -\> F\#), black key to white key (eg. Bb -\> F), and
-    black key to black key (C\# -\> G\#). For more on this, check out
-    The Experiment **Link to The Experiment**.
+    black key to black key (C\# -\> G\#). For more on this, check out <a href="/articles/the-experiment">this article</a>.
 
-    </div>
   </div>
 </div>
