--- a/source/articles/the-practice-routine.html.md.erb
+++ b/source/articles/the-practice-routine.html.md.erb
@@ -1,111 +1,54 @@
 <div class="grid-container">
   <div class="grid-x grid-padding-x">
-    <div class="cell large-8 section section--top" markdown="1">
-#The Practice Routine
+    <div class="cell large-8 section section--top article-body" markdown="1">
 
-I had a few things in mind when developing the curriculum for the
-keyboards to practice. Most importantly, I want to address the three
-main domains of musical prowess, the technical aspect of being able to
-play (addressed by fundamentals), and the two primary ways we determine
-what to play, sight reading and playing by ear.
 
-I had some difficulty coming up with curriculum for the the latter two.
-Both playing by ear and sight reading have the unique challenge of
-needing new material each time through. The second time through playing
-by ear or sight-reading a piece of music will be easier than the first,
-as you will have familiarity with it the second time through. Thus it is
-unfair to test sight reading with content that had already been
-sight-read: the second keyboard reading the material would have the
-advantage. For parity, the content must be new.
+# The Practice Routine
 
-This is where EarMaster 7 comes in. This software generates music to be
-sight read or played by ear, and you can define the parameters
-beforehand. This allows me to practice music that has a general
-difficulty that is completely unique. The software isn't perfect, but
-it's what I'm going to work with for the moment.
+I developed the musical curriculum around three main domains of musical prowess: fundamentals (tested by scales and exercises), sight reading, and playing by ear.
 
-Choosing the material to practice for the fundamentals is a little bit
-more difficult. I tried to pick exercises that were standard and that
-tested different aspects of my technical abilities. I ultimately chose
-three different sets of exercises: Scales and Arpeggios from \_\_\_\_,
-Hannon's Piano exercises, and Slonimsky's Thesaurus of Scales and
-Musical Patterns.
+## Sight Reading and Playing By Ear
 
-Scales and the arpeggios were the easiest decision. They are probably
-the most standard sets of exercises. Choosing the book from which I am
-going to practice the scales and arpeggios is a bit more difficult, but
-I settled on \_\_\_. I'm going to be practicing Major, melodic minor,
-harmonic minor, and natural minor scales, and major and minor arpeggios.
+I had some difficulty coming up with material for the the latter two. Both playing by ear and sight reading have the unique challenge of being unrepeatable. The second time sight reading or playing a piece of music by ear will be easier than the first, as you will have familiarity with it the second time through. Thus it is unfair to test sight reading with content that had already been sight-read: the second keyboard reading the material would have the advantage. For parity, the content must be new.
 
-It was pretty easy to choose Hannon's finger exercises. It is one of the
-most popular sets of exercises for the piano, and it tests the fingers
-in a unique way **What is this unique way?**. Unlike scales, the LIK
-will have no transpositional advantage, and will probably be
-disadvantaged, as everything in the book is played in the key of C,
-making it easier on the traditional keyboard. It is also possible that
-this set of exercises will expose technical limitations of the LIK.
+This is where EarMaster 7 comes in. This software generates music to be sight read or played by ear, and you can define the parameters beforehand. This allows me to practice music that has a general difficulty that is completely unique. The software isn&#39;t perfect, but it&#39;s what I&#39;m going to work with for the moment.
 
-The last set of exercises by Slonimsky is one that I find fascinating.
-Atypical in comparison to the other content, the Thesaurus should do
-well to expose technical limitations on either keyboard. If there was
-any content that is not written for the TK (as I mention **here**), it
-would be the Thesaurus.
+## Fundamentals
 
-##An Incomplete Practice
+Choosing the material to practice for the fundamentals is a little bit more difficult. I tried to pick exercises that were standard and that tested different aspects of my technical abilities. I ultimately chose three different sets of exercises: scales and arpeggios, Hanon: The Virtuoso Pianist in Sixty Exercises, and Slonimsky&#39;s Thesaurus of Scales and Musical Patterns.
 
-There is content that is missing. Notably, I'm not going to be
-practicing chords in fundamentals, sight reading, or playing by ear, and
-I think that it will be a necessary addition in the future. I might need
-to begin to practice real songs, etudes, or solos in the future for
-playing by ear or sight reading.
+Scales and the arpeggios were the easiest decision, as they are probably the most standard set of exercises. I&#39;m going to be practicing major, melodic minor, harmonic minor, and natural minor scales in two octaves, and major and minor arpeggios.
 
-I'm not concerned about having a "complete" or "perfect" practice
-routine upon starting the experiment, partially because there is no
-perfect practice routine, but also because I think that I should be able
-to change the practice routine in the future. I think the practice
-sessions will be fair as long as I am practicing the same exercise sets
-for the same amount of time on each keyboard.
+It was easy to choose to practice Hanon&#39;s finger exercises. It is one of the most popular sets of exercises for the piano, and unlike the other exercises that are focused on the musical passage, Hanon seeks to achieve &quot;agility, independence, strength and perfect evenness in the fingers.&quot; Unlike scales, the LIK will have no transpositional advantage, and will probably be disadvantaged, as a vast majority of the exercises in the book are in the key of C, making it easier on the traditional keyboard. It is also possible that this set of exercises will expose technical limitations of the LIK.
 
-##The Method of Practicing
+The last set of exercises by Slonimsky is one that I find fascinating. Atypical in comparison to the other content, the Thesaurus should do well to expose technical limitations on either keyboard. If there was any content that is not written for the traditional keyboard, it would be the Thesaurus.
 
-I will practice each set of exercises for the same amount of time (and
-thus each domain of musical prowess for the same amount of time), but I
-won't force myself to practice the same exercise for the same amount of
-time, so each keyboard will be allowed to improve at its own pace. I'm
-going to be alternating the order that I play the keyboards if I play
-both keyboards in the same day to avoid a potentially confounding
-variable.^1^
+## An imperfect, malleable practice routine
 
-I have broken up each exercises into a set of incrementing difficulties,
-which is often just incrementing tempo from 60 bpm to 120 bpm. The
-increments are created from my metronome markings, which are increase
-the speed by about 2-4%.
+There is content that is missing. Notably, I&#39;m not going to be practicing chords in fundamentals, sight reading, or playing by ear, and I think that it will be a necessary addition in the future. I might need to begin to practice real songs, etudes, or solos in the future for playing by ear or sight reading.
 
-**All of this has yet to be made**
+I&#39;m not concerned about having a &quot;complete&quot; or &quot;perfect&quot; practice routine upon starting the experiment, partially because there is no perfect practice routine, but also because I think that I should be able to change the practice routine in the future. I think the practice sessions will be fair enough, as long as I am practicing the same exercise sets for the same amount of time on each keyboard. This is potentially a confounding variable, but I recognize that my practice sessions will have to change over time to accommodate my improvement as well as my initial mistakes in assigning content. I would rather have an imperfect, dynamic practice routine than a static, unimprovable practice routine.
 
-All of my practice sessions will be recorded. You can find the pages for
-the practice sessions here. You can find the detailed content of what I
-am going to practice here. You can see my progress here.
+## Method of practicing
 
-1.  There is a potential confounding variable in the order that I
-    practice the keyboards if I practice both in the same day. If I
-    always play the LIK first and the TK second, the LIK might benefit
-    from my mind being fresh, or the TK might benefit from me already
-    being warmed up. I am going to keep track of each time I practice
-    both keyboards in one day, so the next time I practice both
-    keyboards I can alternate the order.
+I will practice each set of exercises for the same amount of time (and thus each domain of musical prowess for the same amount of time), but I won&#39;t force myself to practice the same exercise for the same amount of time, so each keyboard will be allowed to improve at its own pace. I&#39;m going to be alternating the order that I play the keyboards if I play both keyboards in the same day to avoid a potentially confounding variable.<sup>1</sup>
 
-Need to do melodic (with one hand at a time), and harmonic.
+I have broken up each exercises into a set of incrementing difficulties, which is often just incrementing tempo from 60 bpm to 120 bpm. The increments are created from my metronome markings, which are increase the speed by about 2-4%.
 
-5 minutes of scales and arpeggios
+I am using this [Airtable](https://airtable.com/shrjk2lTpQWFpgd26) to keep track of all of my improvement. You can find all of the increments for all of the exercises there.
 
-5 minutes of Hannon
+All of my practice sessions will be recorded. You can find the pages for the practice sessions here. You can find the detailed content of what I am going to practice here. [You can see my progress here](https://linearisomorphickeyboard.com/progress/).
 
-5 minutes of the Thesaurus of Scales and Musical Patterns
+The initial practice session
 
-10 minutes of sight reading
+- 5 minutes of scales and arpeggios
+- 5 minutes of Hanon
+- 5 minutes of the Thesaurus of Scales and Musical Patterns
+- 10 minutes of sight reading
+- 10 minutes of melodic transcription
 
-10 minutes of melodic transcription
-    </div>
-  </div>
+1. There is a potential confounding variable in the order that I practice the keyboards if I practice both in the same day. If I always play the LIK first and the TK second, the LIK might benefit from my mind being fresh, or the TK might benefit from me already being warmed up. I am going to keep track of each time I practice both keyboards in one day, so the next time I practice both keyboards I can alternate the order.
+
+</div>
+</div>
 </div>
