--- a/source/reflections/the-initial-assessment.html.md.erb
+++ b/source/reflections/the-initial-assessment.html.md.erb
@@ -2,28 +2,27 @@
 <div class="grid-x grid-padding-x">
 <div class="cell large-8 section section--top" markdown="1">
 
-### Reflection: The Assessment
+# Reflection: The Assessment
+
+<br>
 
 The initial assessment was an enlightening comedy of errors. In my efforts to get the experiment underway the initial assessment was done hastily, causing mistakes that were as interesting as they were humbling.
 
- I practiced the major, harmonic minor, and melodic minor scale on the traditional keyboard (TK) on July 8th. In the initial assessments I made some decisions that I would later revert. I practiced hands apart before practicing hands together, which I no longer include as a metric.
-# 1
- I didn&#39;t give myself much of an opportunity to learn whatever I was testing myself on. My notation of my accomplishments was poor, and importantly, I was keeping track of what I would practice, not what I was able to do.
-# 2
+I practiced the major, harmonic minor, and melodic minor scale on the traditional keyboard (TK) on July 8th. In the initial assessments I made some decisions that I would later revert. I practiced hands apart before practicing hands together, which I no longer include as a metric.<sup>1</sup> I didn&#39;t give myself much of an opportunity to learn whatever I was testing myself on. My notation of my accomplishments was poor, and importantly, I was keeping track of what I would practice, not what I was able to do.<sup>2</sup>
 
- In these first assessments, I found that I was able to play five scales with hands separate at 60bpm with 8th notes: C major, A major, D melodic minor, G harmonic minor, and D harmonic minor. However when I notated this, I notated what I was going to practice, which was hands together. All of the other scales I would be practicing hands apart.
+In these first assessments, I found that I was able to play five scales with hands separate at 60bpm with 8th notes: C major, A major, D melodic minor, G harmonic minor, and D harmonic minor. However when I notated this, I notated what I was going to practice, which was hands together. All of the other scales I would be practicing hands apart.
 
- Five days later, I practiced the natural minor scale on the TK, and I found that I was able to play the D natural minor at 60bpm and A natural minor at 76bpm (both 8th notes). This was considerably better than I was able to do the week before. I couldn&#39;t play the C Major scale hands together at 60bpm while I could play A natural minor at 76bpm (which has identical fingering). Something was fishy, so I reviewed my notes for the first assessment.
+Five days later, I practiced the natural minor scale on the TK, and I found that I was able to play the D natural minor at 60bpm and A natural minor at 76bpm (both 8th notes). This was considerably better than I was able to do the week before. I couldn&#39;t play the C Major scale hands together at 60bpm while I could play A natural minor at 76bpm (which has identical fingering). Something was fishy, so I reviewed my notes for the first assessment.
 
- On my notes for the first assessments, I had mistakenly recorded that I practiced with 16th notes. I also recorded that I was going to practice the scales hands together, but I read it thinking that I was able to play the scales with hands together. Instead of thinking that I could play five scales with hands apart at 60 bpm with 8th notes, I thought that the record showed that I could play those five scales with hands together at 60 bpm with 16th notes (twice as fast).
+On my notes for the first assessments, I had mistakenly recorded that I practiced with 16th notes. I also recorded that I was going to practice the scales hands together, but I read it thinking that I was able to play the scales with hands together. Instead of thinking that I could play five scales with hands apart at 60 bpm with 8th notes, I thought that the record showed that I could play those five scales with hands together at 60 bpm with 16th notes (twice as fast).
 
 The idea that I had assessed at a speedy tempo provided an explanation discrepancy of skill between the C Major and A natural minor scale, assessed only five days apart. This also felt nice to believe. I was originally surprised at my inability to play many scales, but this offered an alternate narrative: I wasn&#39;t bad at the traditional keyboard, I had merely been practicing too fast, and at this doubled tempo I was still able to play five scales. The narrative flipped, and instead of being bad, I was actually surprisingly good. So I planned to redo my assessments at 60 bpm with eighth notes, and I imagined I would have far more success.
 
- I redid my assessment for the three scales that I was convinced I had practiced incorrectly, the melodic minor, harmonic minor, and major scale (both sets of recordings are available). I assumed that I would be able to play more of the scales at the slower tempo.
+I redid my assessment for the three scales that I was convinced I had practiced incorrectly, the melodic minor, harmonic minor, and major scale (both sets of recordings are available). I assumed that I would be able to play more of the scales at the slower tempo.
 
- A week earlier, I couldn&#39;t play the C Major scale 2 hands together at 8th notes at 60bpm, but this time I did so at 16th notes. I was able to play five major scales, two melodic minor scales, and two harmonic minor scales, with hands together 8th notes at 60bpm or above. My performance was a head and shoulders above my initial assessment. But at the time it didn&#39;t look like that.
+A week earlier, I couldn&#39;t play the C major scale 2 hands together at 8th notes at 60bpm, but this time I did so at 16th notes. I was able to play five major scales, two melodic minor scales, and two harmonic minor scales, with hands together 8th notes at 60bpm or above. My performance was a head and shoulders above my initial assessment. But at the time it didn&#39;t look like that.
 
- When reflecting on the second set of assessments, something seemed strange, on paper it looked like I had gotten significantly worse. Yes, it appeared like the slower tempo made more more successful at a handful of scales. But in comparison to the completed scales in the first assessment, I was only able to play the C Major scale to the same level as the first assessment, and I had gotten worse at the four other scales I achieved (supposedly at 16th notes hands together at 60bpm) in the first assessment. Confused, I did what I should have done before recording an additional set of assessments, and I listened to the original assessments.
+When reflecting on the second set of assessments, something seemed strange, on paper it looked like I had gotten significantly worse. Yes, it appeared like the slower tempo made more more successful at a handful of scales. But in comparison to the completed scales in the first assessment, I was only able to play the C Major scale to the same level as the first assessment, and I had gotten worse at the four other scales I achieved (supposedly at 16th notes hands together at 60bpm) in the first assessment. Confused, I did what I should have done before recording an additional set of assessments, and I listened to the original assessments.
 
 To my embarrassment, I found that the initial assessment used 8th notes, not 16th notes (contrary to my confounding notation). This meant that I was unable to perform any scale with hands together at 60bpm on July 8th.
 
@@ -37,9 +36,12 @@ What does this mean for the study? It means that my initial assessment might not
 
 Despite the multitude of mistakes, the initial assessment provided what I wanted and more: it is an snapshot of my initial abilities, and it taught me that the improvement in the early practice sessions could be explosive, and should be taken with a grain of salt.
 
+<br>
+<br>
 
 
 1. By the time I recorded the second assessment, I was going through the process of removing the metric of playing hands apart at 60bpm. Now the easiest increment for a scale is 60bpm hands together, and I do not assess if I am able to hands apart. I chose this because I figured that I should be practicing hands together whenever possible. If I can&#39;t practice hands together then I will play hands apart at my own tempo, before practicing hands together at my own tempo. From there I would increase tempo until I had 60bpm.
+
 2. This meant that if I could play the C major scale at 60bpm, I would notate C major at 63 bpm (the next increment), rather than 60bpm (what I could actually play). I continued making this error in my assessment, keeping track of what I was going to practice rather than what I was able to do. This was fixed post-assessment. When inputting data, I didn&#39;t listen to what I said or notated and instead I listened through my assessments a second time through to determine what I was able to do.
 
 
